# wrath

./: .editorconfig  Cargo.toml  README.md
sandbox/: Cargo.toml
sandbox/assets/shaders/: cool.glsl  cube.glsl
sandbox/assets/shaders/cool/: fragment.glsl  vertex.glsl
sandbox/src/: example_layer.rs  main.rs  snake_layer.rs
src/: callback_handler.rs  init.rs  lib.rs  window.rs
wrath-engine/: Cargo.toml
wrath-engine/src/: callback_handler.rs  engine.rs  events.rs  gfx.rs  imp.rs  init.rs  input.rs  layer.rs  lib.rs  overlay.rs  platform.rs  renderer.rs  rendering.rs  window.rs
wrath-engine/src/events/: application_events.rs  keyboard_events.rs  mod.rs  mouse_events.rs
wrath-engine/src/gfx/: renderer.rs
wrath-engine/src/imp/: glfw_window.rs  glutin_window.rs  opengl_renderer_impl.rs  x11_window.rs
wrath-engine/src/imp/gl/: window.rs
wrath-engine/src/input/: button.rs  input_state.rs
wrath-engine/src/overlay/: overlay_handle.rs  overlay_stack.rs
wrath-engine/src/platform/: glfw_window.rs  glutin_window.rs  opengl_renderer.rs  x11_window.rs
wrath-engine/src/rendering/: mesh.rs  renderer.rs  shader.rs
wrath-math/: Cargo.toml
wrath-math/src/: lib.rs  vec3.rs  vec4.rs
