[package]
name = "sandbox"
version = "0.1.0"
authors = ["Mathias Magnusson <mathias@magnusson.space>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wrath = { path = "../wrath-engine" }
whmath = { git = "https://github.com/mathiasmagnusson/whmath" }
rand = "0.7.0"
