[package]
name = "wrath"
version = "0.1.0"
authors = ["Mathias Magnusson <mathias@magnusson.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

big-floats = []

[dependencies]
glfw = "0.32.0"
gl = "0.13.0"
