[package]
name = "wrath"
version = "0.1.0"
authors = ["Mathias Magnusson <mathias@magnusson.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.13"
whm = { git = "https://github.com/mathiasmagnusson/whm" }
glutin = "0.21"
